k8s/vikunja/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vikunja
  labels:
    name: vikunja
    environment: production
    compliance: hipaa
