k8s/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
  labels:
    app: vikunja
spec:
  type: ClusterIP
  ports:
  - port: 3456
    targetPort: 3456
    protocol: TCP
    name: http
  selector:
    app: vikunja
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
